--- a/_config.yml
+++ b/_config.yml
@@ -15,6 +15,8 @@ front_matter:
 collections:
   notes:
     output: true
+  pages:
+    output: true
 
 defaults:
   - scope:
@@ -22,4 +24,10 @@ defaults:
       type: notes
     values:
       layout: post
-      permalink: /posts/:slug/index.html
+      permalink: /posts/:slug/
+  - scope:
+      path: ""
+      type: tabs
+    values:
+      layout: page
+      permalink: /:title/
